--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "algoliasearch": "^4.14.2",
+    "kitsu": "^10.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-instantsearch-hooks-web": "^6.32.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
