--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,8 @@
     "kitsu": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-instantsearch-hooks-web": "^6.32.0"
+    "react-instantsearch-hooks-web": "^6.32.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
