--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-tailwind/react": "^1.2.4",
+    "@mui/material": "^5.10.14",
     "algoliasearch": "^4.14.2",
     "kitsu": "^10.0.2",
     "react": "^18.2.0",
