--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BASE_URL=""
-LOCAL_URL='http://localhost:8000/'
-WEB_URL='https://anime-list-manager-back-end-production.up.railway.app/'
+VITE_LOCAL_URL='http://localhost:8000/'
+VITE_WEB_URL='https://anime-list-manager-back-end-production.up.railway.app/'
